fix alignment and get writitngs

--- a/_scss/components/_projects.scss
+++ b/_scss/components/_projects.scss
@@ -70,4 +70,23 @@
   .posts{
     list-style: none;
   }
+
+ .writing-front {
+    text-align: left;
+    font-size: 2em;
+    p {
+        font-family: 'Karla';
+        font-size: 0.5em;
+        font-style: italic;
+        
+    }
+    @media screen and (min-width: $media-pad) {
+      font-size: 2.3em;
+    p {
+        font-size: 0.7em;
+    }
+    }
+    list-style: none;
+  
+  }
 }
