--- a/_scss/components/_work.scss
+++ b/_scss/components/_work.scss
@@ -19,12 +19,15 @@
     font-size: 1em;
   }
   .work-item {
-    margin: 15px 30px 20px 0px;
     display: inline-block;
     position: relative;
     transition: 0.3s;
     max-width: 275px;
-
+    margin: 15px 0px 30px 0px;
+    @media screen and (min-width: 590px) {
+      font-size: 1.3em;
+      margin: 15px 30px 20px 0px;
+    }
     img.work-image {
       width: 100%;
       height: 100%;
